--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 }
 
 
-h1{
+
+h2{
     font-family: 'Nunito', sans-serif;
     background-image: linear-gradient(90deg, #4d78ef, #709df7, #7ea3ef);
     background-clip: text;
@@ -15,18 +16,15 @@ h1{
     -webkit-background-clip: text;
 
     font-weight: 600;
-    font-size: 100px;
+    font-size: 70px;
     text-align: center;
     color: transparent;
 }
 .background{
-    background-color: #000;
-  
-    min-height: 950px;
-  
-    background-position: left;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
+        background-size: 3em 3em;
+        background-color: #000000;
+        opacity: 1
 }
 .topping-button {
     font-family: 'Nunito', sans-serif;
@@ -86,3 +84,42 @@ footer{
     text-align: center;
 }
 
+
+
+.card__container {
+    padding: 10px;
+  }
+
+.card {
+    width: 80%;
+    height: 70px;
+    border-radius: 20px;
+    padding: 7px;
+    margin-bottom: 200px;
+    
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+    margin: auto;
+}
+  
+  .cardContent {
+    background: rgb(5, 6, 45);
+    border-radius: 17px;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    font-size:30px;
+  }
+  .cardContent.selected {
+      background-color: #000;
+      color: #fff;
+  }
+    
+  .cardContent:hover {
+      background-color: white;
+      color: black;
+  }
+    
+  .card:active {
+      transform: scale(0.95);
+  }
