--- a/src/Cashier.css
+++ b/src/Cashier.css
@@ -86,7 +86,6 @@ h2{
   grid-template-columns: auto auto;
 }
 .grid-item {
-  border: 1px solid rgba(0, 0, 0, 0.8);
   font-size: 30px;
   
   text-align: center;
@@ -102,8 +101,8 @@ h2{
 .cashButton{
   font-family: 'Nunito', sans-serif;
   font-size:40px;
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
   background-color: lightblue;
   border-radius: 20px;
 }
