--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,30 @@ footer{
   .card:active {
       transform: scale(0.95);
   }
+
+
+/* .custom-tabs .tabs-container {
+    margin: 20px;
+}
+
+.custom-tabs .tab-list {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.custom-tabs .tab {
+    font-size: 50px;
+    font-weight: bold;
+    color: #333;
+    padding: 10px;
+    border: 2px solid #333;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.tab:hover {
+    background-color: #333;
+    color: #fff;
+} */
