--- a/src/Cashier.css
+++ b/src/Cashier.css
@@ -107,16 +107,34 @@ h2{
   border-radius: 20px;
 }
 
-  .cashButton:selected {
-      background-color: #000;
-      color: #fff;
+.cashButton:selected {
+    background-color: #000;
+    color: #fff;
+}
+
+.cashButton:hover {
+    background-color: white;
+    color: black;
+}
+
+.cashButton:active {
+    transform: scale(0.95);
+}
+
+#button {
+    line-height: 12px;
+    width: 18px;
+    font-size: 8pt;
+    font-family: tahoma;
+    margin-top: 1px;
+    margin-right: 2px;
   }
-    
-  .cashButton:hover {
-      background-color: white;
-      color: black;
-  }
-    
-  .cashButton:active {
-      transform: scale(0.95);
-  }
+
+.signin{
+    background: var(--blueMain);
+    color: #fff;
+    padding: 15px;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 25px;
+}
