--- a/src/ManagerView.css
+++ b/src/ManagerView.css
@@ -6,11 +6,7 @@
     
 }
 
-main {
-  text-align: left;
-  vertical-align: center;
-  line-height: 100vh
-}
+
 
 h2{
     font-family: 'Nunito', sans-serif;
@@ -25,13 +21,14 @@ h2{
     color: transparent;
 }
 .background{
+    background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
         background-size: 3em 3em;
         background-color: #000000;
         opacity: 1
 }
 .topping-button {
     font-family: 'Nunito', sans-serif;
-    background-color: rgb(79, 134, 146);
+    background-color: rgb(67, 201, 231);
     color: #000;
     border: none;
     padding: 10px 20px;
@@ -70,7 +67,7 @@ h2{
 
 
 }
-
+  
 .rejectButton:hover {
     background-color: black;
 }
@@ -81,47 +78,45 @@ h2{
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto;
+.card__container {
+    padding: 10px;
+  }
+
+.card {
+    width: 80%;
+    height: 70px;
+    border-radius: 20px;
+    padding: 7px;
+    margin-bottom: 200px;
+    
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+    margin: auto;
 }
-.grid-item {
-  font-size: 30px;
   
-  text-align: center;
-  border-radius: 20px;
-  padding: 5px;
-}
-.gridMover{
-  position:relative; right:10px; top:2px;
-  width: 40%;
-  height: 40%;
-  padding: 20px;
-}
-.cashButton{
-  font-family: 'Nunito', sans-serif;
-  font-size:40px;
-  width: 300px;
-  height: 300px;
-  background-color: lightblue;
-  border-radius: 20px;
-}
-
-.cashButton:selected {
-    background-color: #000;
+  .cardContent {
+    background: rgb(5, 6, 45);
+    border-radius: 17px;
+    width: 100%;
+    height: 100%;
     color: #fff;
-}
+    font-size:30px;
+  }
+  .cardContent.selected {
+      background-color: #000;
+      color: #fff;
+  }
+    
+  .cardContent:hover {
+      background-color: white;
+      color: black;
+  }
+    
+  .card:active {
+      transform: scale(0.95);
+  }
 
-.cashButton:hover {
-    background-color: white;
-    color: black;
-}
-
-.cashButton:active {
-    transform: scale(0.95);
-}
-
-.exit_text{
+  .exit_text{
     background-clip: text;
     background: rgb(127, 45, 45);
     color: #fff;
@@ -137,3 +132,5 @@ h2{
     font-family: tahoma;
     margin-right: 10px;
   }
+
+
