--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,10 @@ h2{
 }
 .background{
     background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
-        background-size: 3em 3em;
-        background-color: #000000;
-        opacity: 1
+    background-size: 3em 3em;
+    background-color: #000000;
+    opacity: 1;
+    padding-bottom: 35%;
 }
 .topping-button {
     font-family: 'Nunito', sans-serif;
@@ -150,3 +151,103 @@ footer{
     background-color: #333;
     color: #fff;
 } */
+
+.finish_order{
+    width: 40%;
+    height: 70px;
+    margin: auto;
+    padding: 50px;
+}
+.finish_order:active {
+    transform: scale(0.95);
+}
+.finish_orderText{
+    width: 100%;
+    height: 100%;
+    border-radius: 17px;
+    font-size:30px;
+    color: black;
+    background-color: #fff;
+    border: #000 3px solid;
+}
+
+
+.finish_orderText.selected {
+    background-color: black;
+    color: #fff;
+}
+  
+.finish_orderText:hover {
+    background-color: black;
+    color: #fff;
+}
+.itemBoxContainer{
+    width: 50%;
+    height: 120px;
+    margin: auto;
+    padding: 50px;
+}
+.itemBox{
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    border-radius: 17px;
+    color:#000;
+    background-color: #fff;
+    border: #000 3px solid;
+}
+
+.itemBoxContentName{
+    text-align: left;
+    font-size:30px;
+}
+
+.itemBoxContentPrice{
+    float:right;
+    font-size: 25px;
+}
+
+.itemBoxContentEditRemove{
+    text-align: left;
+    font-size:30px;
+}
+
+.itemBoxContentEditRemove a{
+    color: #157AFE;
+}
+
+.itemBoxContentEditRemove a:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.itemBoxContentQTY{
+    float:right;
+    font-size: 25px;
+    color: black;
+}
+
+.subtotalContainer{
+    width: 50%;
+    height: 120px;
+    margin: auto;
+    padding-top: 500px;
+}
+.subtotalBox{
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    border-radius: 17px;
+    color:#000;
+    background-color: #fff;
+    border: #000 3px solid;
+}
+.contentName{
+    text-align: left;
+    font-size:30px;
+}
+
+.contentPrice{
+    float:right;
+    font-size: 25px;
+}
