--- a/src/ManagerView.css
+++ b/src/ManagerView.css
@@ -22,9 +22,11 @@ h2{
 }
 .background{
     background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
-        background-size: 3em 3em;
-        background-color: #000000;
-        opacity: 1
+    background-size: 3em 3em;
+    background-color: #000000;
+    opacity: 1;
+    padding-bottom: 35%;
+
 }
 .topping-button {
     font-family: 'Nunito', sans-serif;
@@ -118,19 +120,30 @@ h2{
 
   .exit_text{
     background-clip: text;
-    background: rgb(127, 45, 45);
+    background: rgb(203, 41, 41);
     color: #fff;
-    padding: 15px;
+    padding: 25px;
     cursor: pointer;
-    width: 15%;
+    width: 10%;
     border-radius: 25px;
+    font-size: 20px;
+    margin-top: 10px;
 }
 .exit {
     line-height: 100%;
-    text-align: right;
-    font-size: 8pt;
     font-family: tahoma;
     margin-right: 10px;
+    margin-top: 10px;
+  }
+
+  .exit_text:hover {
+    font-size: 25px;
+    font-family: tahoma;
+    background: #fff;
+    color: rgb(203, 41, 41);
+  }
+  .exit_text:active {
+    transform:scale(0.8);
   }
 
 
