--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 
-
+/* Title*/
 h2{
     font-family: 'Nunito', sans-serif;
     background-image: linear-gradient(90deg, #4d78ef, #709df7, #7ea3ef);
@@ -20,6 +20,7 @@ h2{
     text-align: center;
     color: transparent;
 }
+
 .background{
     background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
     background-size: 3em 3em;
@@ -27,7 +28,9 @@ h2{
     opacity: 1;
     padding-bottom: 35%;
 }
-.topping-button {
+
+/* Buttons*/
+/* .topping-button {
     font-family: 'Nunito', sans-serif;
     background-color: rgb(67, 201, 231);
     color: #000;
@@ -51,7 +54,7 @@ h2{
   
 .topping-button:active {
     transform: scale(0.95);
-}
+
 .rejectButton {
     background-color: grey;
     border: none;
@@ -77,7 +80,7 @@ h2{
     background-color: black;
     transform: translateY(4px);
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
-}
+} */
 
 footer{
     background-color: lightgray;
@@ -152,6 +155,8 @@ footer{
     color: #fff;
 } */
 
+
+/* Toppings File */
 .finish_order{
     width: 40%;
     height: 70px;
@@ -197,15 +202,6 @@ footer{
     border: #000 3px solid;
 }
 
-.itemBoxContentName{
-    text-align: left;
-    font-size:30px;
-}
-
-.itemBoxContentPrice{
-    float:right;
-    font-size: 25px;
-}
 
 .itemBoxContentEditRemove{
     text-align: left;
@@ -250,4 +246,13 @@ footer{
 .contentPrice{
     float:right;
     font-size: 25px;
+}
+
+.payBackground{
+    margin: auto;
+    background-color: #eae7e7;
+    opacity: 1;
+    box-shadow: rgba(149, 157, 165, 24) 0px 8px 24px;/* Adds shadow to the outside of the main box*/
+    width: min(100%, 700px);
+    border-radius: 10px;
 }
