--- a/src/Cashier.css
+++ b/src/Cashier.css
@@ -143,7 +143,7 @@ h2{
     padding: 20px;
     background-color: #709df7;
   }
-  .box{
+  .box2{
     width: 300px;
     height: 70px;
     border: 3px solid black; /* sets a 1 pixel wide solid black border */
