--- a/src/Cashier.css
+++ b/src/Cashier.css
@@ -24,6 +24,7 @@ h2{
     text-align: center;
     color: transparent;
 }
+
 .background{
     background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
     background-size: 3em 3em;
@@ -45,8 +46,6 @@ h2{
     cursor: pointer;
     transition-duration: 0.3s;
     border-radius: 15px;
-
-
 }
 
 .rejectButton:hover {
@@ -63,6 +62,10 @@ h2{
   display: grid;
   grid-template-columns: auto auto;
   width: 70%;
+  /* margin: auto;
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 20px; */
 }
 .grid-item {
   font-size: 30px;
@@ -85,8 +88,8 @@ h2{
     display: flex;
     align-items: right;
     /* background-color: #4d78ef; */
-
 }
+
 .baseSection{
     display: flex;
     align-items: left;
@@ -94,7 +97,6 @@ h2{
 .grid-containerToppings {
     display: grid;
     grid-template-columns: auto auto auto;
-
   }
   
 .gridMoverToppings{
@@ -113,6 +115,37 @@ h3{
 .backgroundBland{
   background-color: #ffffff;
 }
+/* .crust{
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 20px;
+  margin: 20px;
+}
+.sauce{
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 20px;
+  margin: 20px;
+}
+.meats{
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 20px;
+  margin: 20px;
+}
+.veggies{
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 20px;
+  margin: 20px;
+}
+.drizzle{
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 20px;
+  margin: 20px;
+
+} */
 .cashButton{
   font-family: 'Nunito', sans-serif;
   font-size:40px;
@@ -432,5 +465,11 @@ h3{
    .button-name5:active {
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
+   }
+   .counter{
+    font-size: 35px;
+    display: flex;
+    align-items: center;
+    place-content: center;
    }
    
