--- a/src/Cashier.css
+++ b/src/Cashier.css
@@ -5,6 +5,13 @@
     align-items: center; */
     
 }
+:root{
+  --red:#ee2a2a;
+  --orange:#f47f09;
+  --green:#9ef155;
+  --blue:#00f7ff;
+  --pink:#ff0099;
+}
 
 main {
   text-align: left;
@@ -200,10 +207,10 @@ h3{
 
   }
   
-  .button-name {
+  .button-nameC {
     align-items: center;
     appearance: none;
-    background-color: #FCFCFD;
+    background-color: var(--red);
     border-radius: 4px;
     border-width: 0;
     box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px,rgba(45, 35, 66, 0.15) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
@@ -231,16 +238,16 @@ h3{
     font-size: 18px;
    }
    
-   .button-name:focus {
+   .button-nameC:focus {
     box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
    }
    
-   .button-name:hover {
+   .button-nameC:hover {
     box-shadow: rgba(45, 35, 66, 0.3) 0 4px 8px, rgba(45, 35, 66, 0.2) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     transform: translateY(-2px);
    }
    
-   .button-name:active {
+   .button-nameC:active {
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
    }
@@ -293,7 +300,7 @@ h3{
    .button-name2 {
     align-items: center;
     appearance: none;
-    background-color: #ff0606;
+    background-color: var(--orange);
     border-radius: 4px;
     border-width: 0;
     box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px,rgba(45, 35, 66, 0.15) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
@@ -337,7 +344,7 @@ h3{
    .button-name3 {
     align-items: center;
     appearance: none;
-    background-color: #9ef155;
+    background-color: var(--green);
     border-radius: 4px;
     border-width: 0;
     box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px,rgba(45, 35, 66, 0.15) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
@@ -381,7 +388,7 @@ h3{
    .button-name4 {
     align-items: center;
     appearance: none;
-    background-color: #00f7ff;
+    background-color: var(--blue);
     border-radius: 4px;
     border-width: 0;
     box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px,rgba(45, 35, 66, 0.15) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
@@ -425,7 +432,7 @@ h3{
    .button-name5 {
     align-items: center;
     appearance: none;
-    background-color: #ff0099;
+    background-color: var(--pink);
     border-radius: 4px;
     border-width: 0;
     box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px,rgba(45, 35, 66, 0.15) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
@@ -471,5 +478,24 @@ h3{
     display: flex;
     align-items: center;
     place-content: center;
+    background: rgb(0, 0, 0);
+    color: #ffffff;
    }
+
+   .red{
+    color: var(--red);
+   }
+   .orange{
+    color: var(--orange);
+   }
+   .green{
+    color: var(--green);
+   }
+   .blue{
+    color: var(--blue);
+   }
+   .pink{
+    color: var(--pink);
+   }
+
    
