ive been working on this for 2 and a half hours and im losing my mind, but its progress

--- a/src/ManagerView.css
+++ b/src/ManagerView.css
@@ -10,7 +10,7 @@
 
 h2{
     font-family: 'Nunito', sans-serif;
-    background-image: linear-gradient(90deg, #4d78ef, #709df7, #7ea3ef);
+    background-image: linear-gradient(90deg,#fba937, #f7ca28,#ebff0b);
     background-clip: text;
 
     -webkit-background-clip: text;
