--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 /* Title*/
 h2{
     font-family: 'Nunito', sans-serif;
-    background-image: linear-gradient(90deg, #4d78ef, #709df7, #7ea3ef);
+    background-image: linear-gradient(90deg,#fba937, #f7ca28,#ebff0b);
     background-clip: text;
 
     -webkit-background-clip: text;
@@ -21,12 +21,12 @@ h2{
     color: transparent;
 }
 
-.background{
-    background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
-    background-size: 3em 3em;
+.background10{
+    /* background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
+    background-size: 3em 3em; */
     background-color: #000000;
-    opacity: 1;
-    padding-bottom: 35%;
+    /* opacity: 1;
+    padding-bottom: 35%; */
 }
 
 /* Buttons*/
@@ -102,7 +102,7 @@ footer{
     margin-bottom: 200px;
     
     box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+    background-image: linear-gradient(144deg,#fba937, #f7ca28 50%,#ebff0b);
     margin: auto;
 }
   
