--- a/src/Cashier.css
+++ b/src/Cashier.css
@@ -20,24 +20,24 @@ main {
 }
 
 h2{
-    font-family: 'Nunito', sans-serif;
-    background-image: linear-gradient(90deg, #4d78ef, #709df7, #7ea3ef);
-    background-clip: text;
+  font-family: 'Nunito', sans-serif;
+  background-image: linear-gradient(90deg,#fba937, #f7ca28,#ebff0b);
+  background-clip: text;
 
-    -webkit-background-clip: text;
+  -webkit-background-clip: text;
 
-    font-weight: 600;
-    font-size: 70px;
-    text-align: center;
-    color: transparent;
+  font-weight: 600;
+  font-size: 70px;
+  text-align: center;
+  color: transparent;
 }
 
 .background{
-    background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
-    background-size: 3em 3em;
+    /* background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
+    background-size: 3em 3em; */
     background-color: #000000;
-    opacity: 1;
-    padding-bottom: 35%;
+    /* opacity: 1;
+    padding-bottom: 35%; */
 }
 
 .rejectButton {
@@ -429,6 +429,9 @@ h3{
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
    }
+   .button-name4:selected {
+    
+   }
    .button-name5 {
     align-items: center;
     appearance: none;
@@ -496,6 +499,36 @@ h3{
    }
    .pink{
     color: var(--pink);
+   }
+   .selected{
+    background-color: grey;
+    align-items: center;
+    appearance: none;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px,rgba(45, 35, 66, 0.15) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #36395A;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: "JetBrains Mono",monospace;
+    height: 100px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s,transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow,transform;
+    font-size: 18px;
    }
 
    
