--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 /* Title*/
 h2{
     font-family: 'Nunito', sans-serif;
-    background-image: linear-gradient(90deg,#fba937, #f7ca28,#ebff0b);
+    background-image: linear-gradient(90deg,#f57c19, #f7ca28,#ebff0b);
     background-clip: text;
 
     -webkit-background-clip: text;
@@ -102,7 +102,7 @@ footer{
     margin-bottom: 200px;
     
     box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-    background-image: linear-gradient(144deg,#fba937, #f7ca28 50%,#ebff0b);
+    background-image: linear-gradient(144deg,#f57c19, #f7ca28 50%,#ebff0b);
     margin: auto;
 }
   
@@ -112,7 +112,7 @@ footer{
     width: 100%;
     height: 100%;
     color: #fff;
-    font-size:30px;
+    font-size:37px;
   }
   .cardContent.selected {
       background-color: #000;
