--- a/src/Cashier.css
+++ b/src/Cashier.css
@@ -483,7 +483,9 @@ h3{
     place-content: center;
     background: rgb(0, 0, 0);
     color: #ffffff;
+    justify-content: space-evenly;
    }
+
 
    .red{
     color: var(--red);
