--- a/src/Login.css
+++ b/src/Login.css
@@ -212,6 +212,7 @@ background-position: 0 0,35px 35px;
     padding: 23px 0px 7px;
     width: 100%;
     transition: .3s ease;
+    padding-left: 10px;
 }
 
 .input-field label{
