--- a/src/App.css
+++ b/src/App.css
@@ -197,9 +197,9 @@ footer{
     height: 100%;
     border-radius: 17px;
     font-size:30px;
-    color: black;
-    background-color: #fff;
-    border: #000 5px solid;
+    color: #fff;
+    background-color: #000;
+    border: #fff 5px solid;
 }
 
 
