--- a/src/App.css
+++ b/src/App.css
@@ -337,5 +337,26 @@ footer{
     border-radius: 0 15px 15px 15px;
   }
   
+  .orderLog2{
+    display: flex;
+    align-items: right;
+    padding: 20px;
+    background-color: transparent;
+  }
+  .box3{
+    width: 400px;
+    height: 770px;
+    border: 3px solid black; /* sets a 1 pixel wide solid black border */
+    background-color: #fff;
+    box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px,rgba(45, 35, 66, 0.15) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  }
+
+.buttonSelection{
+    display: gird;
+    /* align-items: left; */
+    grid-template-columns: 1fr 25%;
+    align-items: center;
+    /* background-color: #4d78ef; */
+}
 
   
