--- a/src/Login.css
+++ b/src/Login.css
@@ -269,3 +269,14 @@ background-position: 0 0,35px 35px;
     width: 20px;
     height: 20px;
 }
+
+.googleAuthButton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.googleAuthButton button {
+    font-size: 108px !important; /* Change the font size to your desired value */
+  }
+  
