--- a/src/App.css
+++ b/src/App.css
@@ -359,4 +359,12 @@ footer{
     /* background-color: #4d78ef; */
 }
 
+.selected2 {
+    background: rgb(70, 70, 72);
+    border-radius: 17px;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    font-size:37px;
+  }
   
