--- a/src/ManagerView.css
+++ b/src/ManagerView.css
@@ -28,71 +28,21 @@ h2{
     padding-bottom: 35%;
 
 }
-.topping-button {
-    font-family: 'Nunito', sans-serif;
-    background-color: rgb(67, 201, 231);
-    color: #000;
-    border: none;
-    padding: 10px 20px;
-    font-size: 50px;
-    border-radius: 9px;
-    transition: background-color 0.4s ease;
-    width: 100%;
-}
-  
-.topping-button.selected {
-    background-color: #000;
-    color: #fff;
-}
-  
-.topping-button:hover {
-    background-color: #000;
-    color: #fff;
-}
-  
-.topping-button:active {
-    transform: scale(0.95);
-}
-.rejectButton {
-    background-color: grey;
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    transition-duration: 0.3s;
-    border-radius: 15px;
 
-
-}
-  
-.rejectButton:hover {
-    background-color: black;
-}
-  
-.rejectButton:active {
-    background-color: black;
-    transform: translateY(4px);
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
-}
-
-/* .card__container {
+.card__container {
     padding: 10px;
+    
   }
 
 .card {
-    width: 80%;
-    height: 70px;
-    border-radius: 20px;
+    width: 250%;
+    height: 120px;
+    border-radius: 30px;
     padding: 7px;
     margin-bottom: 200px;
-    
+    justify-content: center;
     box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+    background-image: linear-gradient(90deg,#fba937, #f7ca28,#ebff0b);
     margin: auto;
 }
   
@@ -116,7 +66,8 @@ h2{
     
   .card:active {
       transform: scale(0.95);
-  } */
+  } 
+
 
   .exit_text{
     background-clip: text;
