--- a/src/ManagerView.css
+++ b/src/ManagerView.css
@@ -29,12 +29,12 @@ h2{
 
 }
 
-.card__container {
+.card__containerMan {
     padding: 10px;
     
   }
 
-.card {
+.cardMan {
     width: 250%;
     height: 120px;
     border-radius: 30px;
@@ -46,7 +46,7 @@ h2{
     margin: auto;
 }
   
-  .cardContent {
+  .cardContentMan {
     background: rgb(5, 6, 45);
     border-radius: 17px;
     width: 100%;
@@ -54,17 +54,17 @@ h2{
     color: #fff;
     font-size:30px;
   }
-  .cardContent.selected {
+  .cardContentMan.selected {
       background-color: #000;
       color: #fff;
   }
     
-  .cardContent:hover {
+  .cardContentMan:hover {
       background-color: white;
       color: black;
   }
     
-  .card:active {
+  .cardMan:active {
       transform: scale(0.95);
   } 
 
