--- a/src/ManagerView.css
+++ b/src/ManagerView.css
@@ -35,15 +35,15 @@ h2{
   }
 
 .cardMan {
-    width: 250%;
-    height: 120px;
-    border-radius: 30px;
-    padding: 7px;
-    margin-bottom: 200px;
-    justify-content: center;
-    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-    background-image: linear-gradient(90deg,#fba937, #f7ca28,#ebff0b);
-    margin: auto;
+  width: 80%;
+  height: 140px;
+  border-radius: 20px;
+  padding: 7px;
+  margin-bottom: 200px;
+  
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  background-image: linear-gradient(144deg,#f57c19, #f7ca28 50%,#ebff0b);
+  margin: auto;
 }
   
   .cardContentMan {
