--- a/src/App.css
+++ b/src/App.css
@@ -360,11 +360,11 @@ footer{
 }
 
 .selected2 {
-    background: rgb(70, 70, 72);
+    background: rgb(255, 255, 255);
     border-radius: 17px;
     width: 100%;
     height: 100%;
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-size:37px;
   }
   
