--- a/src/Login.css
+++ b/src/Login.css
@@ -279,4 +279,25 @@ background-position: 0 0,35px 35px;
 .googleAuthButton button {
     font-size: 108px !important; /* Change the font size to your desired value */
   }
+
+  .google-maps{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, 
+            rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    cursor: pointer;
+    width: 100%;
+    height: 35px;
+    border-radius: 7px;
+}
+.google-maps:hover{
+    box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 2px 4px rgba(0, 0, 0, .25);
+}
+.googleContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
   
