quality of life update

--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,7 @@ footer{
   .cardContent:hover {
       background-color: white;
       color: black;
+      cursor: pointer;
   }
     
   .card:active {
