--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ h2{
 
 .background{
     background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
-    background-size: 3em 3em;
+    background-size: cover;
     background-color: #000000;
     opacity: 1;
     padding-bottom: 40%;
