--- a/src/Cashier.css
+++ b/src/Cashier.css
@@ -189,12 +189,12 @@ h3{
     background-color: #ffffff;
   }
   .box2{
-    width: 300px;
+    width: 325px;
     height: 570px;
     border: 3px solid black; /* sets a 1 pixel wide solid black border */
     background-color: #fff;
     box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px,rgba(45, 35, 66, 0.15) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-
+    overflow: auto;
   }
   
   .button-nameC {
@@ -595,8 +595,8 @@ h3{
     line-height: 1;
     list-style: none;
     overflow: hidden;
-    padding-left: 110px;
-    padding-right: 110px;
+    padding-left: 125px;
+    padding-right: 125px;
     position: relative;
     text-align: left;
     text-decoration: none;
@@ -722,3 +722,36 @@ h3{
     color: rgb(203, 41, 41);
     border: 3px solid #000;
   }
+
+  .total{
+    font-size: 15px;
+  }
+/* 
+span{
+    color: grey;
+    display: flex;
+}
+
+span::before, span::after{
+    content: '';
+    width: 100%;
+    height: 3px;
+    background: var(--grey);
+    margin: auto;
+}
+
+span::before{
+    margin-right: 1rem;
+}
+
+span::after{
+    margin-left: 1rem;
+} */
+
+hr {
+  border-top: 3px solid grey;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+  
+}
