--- a/src/ManagerView.css
+++ b/src/ManagerView.css
@@ -143,4 +143,72 @@ h2{
   color: #505050;
 }
 
+/*Order History*/
+.orderHistoryDiv {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
+.orderPaperFormat {
+  display: 'flex'; 
+  width: "100%"; 
+  margin-top: "1rem";
+  margin-bottom:"1rem"; 
+  justify-content: 'center';
+  align-items: center;
+}
+
+.orderBTN{
+  margin-top: 2%;
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+}
+
+/*Sale Report*/
+.saleComponents {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.salePaperFormat {
+  display: flex;
+  width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.saleTextFormat {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+
+/*XZ Report*/
+.xzBackground{
+  background: radial-gradient(circle at top left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom left,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%), radial-gradient(circle at top right ,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%) , radial-gradient(circle at bottom right,transparent 9%, #3a3a3a 10% ,#3a3a3a 15% , transparent 16%),radial-gradient(circle, transparent 25%, #000000  26%),linear-gradient(45deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #3a3a3a 47%, #3a3a3a 52%, transparent 53%);
+  background-size: 3em 3em;
+  background-color: #000000;
+  opacity: 1;
+  padding-bottom: 35%;
+  padding: 5%;
+}
+
+.xzPaper {
+  padding: 3%;
+}
+
+.xzTextField {
+  margin-top: 95px;
+  margin-left: 18px;
+
+}
+
+/*Inventory*/
+.divLeft {
+  margin-left: 9%;
+}
