--- a/src/Login.css
+++ b/src/Login.css
@@ -66,7 +66,7 @@ h1{
 }
 
 span{
-    color: var(--grey);
+    color: var(--greyAccessabile);
     display: flex;
     /* justify-content: center;
     align-items: center; */
