--- a/src/Cashier.css
+++ b/src/Cashier.css
@@ -74,10 +74,6 @@ h2{
   display: grid;
   grid-template-columns: auto auto;
   width: 100%;
-  /* margin: auto;
-  background-color: rgb(255, 255, 255);
-  padding: 5px;
-  border-radius: 20px; */
 }
 /* .grid-item {
   font-size: 30px;
@@ -271,6 +267,7 @@ h3{
     white-space: nowrap;
     will-change: box-shadow,transform;
     font-size: 18px;
+    width: 270px;
    }
    
    .button-nameBase:focus {
